# vpnparty

./: Cargo.toml  README.md
.github/workflows/: build.yml  clippy.yml  fmt.yml  release.yml
generator/: Cargo.toml
generator/src/: main.rs
vpnparty/: Cargo.toml
vpnparty/src/: broadcast_listener.rs  cli_parser.rs  logger.rs  main.rs  mdns_listener.rs  multicast_connection.rs  multicast_discovery.rs  network_devices.rs  pcap_filter.rs  udp.rs  udp_discovery.rs
