[package]
name = "generator"
version = "0.1.0"
authors = "Vladyslav Tsilytskyi"
edition = "2021"
description "A tool for broadcast packets generation."
homepage = "https://github.com/tvladyslav/vpnparty"
repository = "https://github.com/tvladyslav/vpnparty"
license = "GPL-3.0-only"
keywords = ["UDP", "broadcast"]
categories = ["command-line-utilities", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
